DMP-2044 Update getAudioMetadata: only fetch media from channel 1